Fix z-index bug

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -28,7 +28,6 @@ a {
 }
 
 .header {
-    z-index: 100;
     height: 60px;
     box-shadow: 0px 60px 90px -26px rgba(0, 0, 0, 0.5);
     @include fill-parent;
@@ -99,22 +98,22 @@ a {
             border-radius: 50%;
             box-shadow: inset 5px 5px 30px rgba(0, 0, 0, 0.5);
             overflow: hidden;
+            z-index: -1;
+            height: 0;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
 
             @include media($tablet-up) {
                 width: 75%;
                 margin: 0 auto;
-                position: relative;
+                padding-bottom: 75%;
             }
             @include media($mobile-only) {
-                @include span-columns(1);
-            }
-
-            img {
-                width: 100%;
-                border-radius: 50%;
-                z-index: -1;
-                display: block;
-                position: relative;
+                width: 20%;
+                float: left;
+                padding-bottom: 20%;
+                margin-right: 5%;
             }
         }
 
